<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignInFragment"
    android:padding="10dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:alpha="1"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:counterTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:counterTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        android:alpha="1"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="0"
            android:textColor="@color/black"
            android:maxLength="16"
            android:fontFamily="@font/poppins_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="1"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="@+id/passwordContainer"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="1"
        android:backgroundTint="@color/blue_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="1"
        android:text="@string/sign_in_with"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="1"
        android:text="@string/google"
        android:textColor="@color/white"
        app:backgroundTint="@color/red_google"
        app:cornerRadius="15dp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_continue"
        app:layout_constraintVertical_bias="0.035" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_no_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:alpha="1"
            android:text="@string/dont_have_account"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:alpha="1"
            android:text="@string/register"
            android:textColor="@color/blue_button"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>