<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.identification.IdentificationResultFragment"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_border_rounded"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/identification_results"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/water_quality"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/tv_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hasil" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/parameter_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/tv_detail_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/temperature"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail" />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/temperature"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail" />

        <TextView
            android:id="@+id/tv_detail_ph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/ph"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_temperature" />

        <TextView
            android:id="@+id/tv_ph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/ph"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_temperature" />

        <TextView
            android:id="@+id/tv_detail_ammonia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/ammonia"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_ph" />

        <TextView
            android:id="@+id/tv_ammonia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/ammonia"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_ph" />

        <TextView
            android:id="@+id/tv_detail_kh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/kh"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_ammonia" />

        <TextView
            android:id="@+id/tv_kh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/kh"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_ammonia" />

        <TextView
            android:id="@+id/tv_detail_gh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/gh"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_kh" />

        <TextView
            android:id="@+id/tv_gh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/gh"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_kh" />

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_gh" />

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/tips"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/tv_detail_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/tips"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_tips" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>