<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.EditProfileFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_border_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="5dp"
            android:paddingVertical="4dp"
            android:background="@drawable/bg_border_rounded_form"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="5dp"
            android:paddingVertical="4dp"
            android:background="@drawable/bg_border_rounded_form"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/line1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="1"
        android:backgroundTint="@color/blue_button"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="1"
        android:backgroundTint="@color/red"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>